--- a/react-ai-tool/index.html
+++ b/react-ai-tool/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React AI Tool</title>
   </head>
-  <body class="bg-zinc-900 h-screen">
+  <body class="dark:bg-zinc-900 bg-amber-100 h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
